--- a/app/views/en/game/index.ejs
+++ b/app/views/en/game/index.ejs
@@ -16,8 +16,19 @@
 
 	    -webkit-transition: all .1s;
 	}
+
+	#messages {
+		position: fixed;
+		bottom: 0px;
+		left: 0px;
+		width: 500px;
+		height: 100px;
+		background-color: #000;
+		overflow: scroll;
+	}
 </style>
 
+<div id="messages"></div>
 <div id="title"></div>
 
 <script src="app/public/js/crafty-min.js"></script>
