Added a bunch of stuff to plugins, which can now actively persist between reloads and other things like that. Yay!

--- a/app/views/en/game/index.ejs
+++ b/app/views/en/game/index.ejs
@@ -408,6 +408,14 @@
 			window.getMap = function(id) {
 			    window.currentMap = window.currentMap || {};
 
+                if (window.entities) {
+                    for (var selector in window.entities) {
+                        window.entities[selector].destroy();
+                    }
+
+                    window.entities = {};
+                }
+
 				P.controller("map").getMap(id, function(tiles) {
 				    $('#mapID[name="id"]').val(tiles.id);
 
